Added navigation to header logo // added more styling to header in general

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,9 @@
   } */
 
 	--black-bg: #000000;
-	--dark-grey-bg: #rgb(20, 20, 20);
+	--dark-grey-bg: #181818;
 	--light-grey-clr: #999999;
-	--yellow-clr: #f5f119;
+	--yellow-clr: #e6d013;
 }
 
 * {
