--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,8 @@
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	margin: 1rem;
+	padding: 2rem;
+	background-color: var(--dark-grey-bg);
 }
 
 .header-section__logo {
