--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 	--black-bg: #000000;
 	--dark-grey-bg: #181818;
 	--light-grey-clr: #999999;
-	--yellow-clr: #e6d013;
+	--yellow-clr: #ecc901;
 }
 
 * {
