--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,19 @@
   '.indexpage__section {
       background-color: var(NamnPåVariabel)';
   } */
+
+	--black-bg-color: #000000;
 }
 
 * {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+}
+
+body {
+	background-color: var(--black-bg-color);
+	font-family: Arial, sans-serif;
 }
 
 .app {
