Refactor API key usage and improve error handling in movie-related pages; update CSS for error messages

--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,10 @@ body {
 .d-none {
 	display: none;
 }
+
+.error-p {
+	font-size: 2rem;
+	color: var(--yellow-clr);
+	text-align: center;
+	margin-top: 4rem;
+}
