Refactor header and favorite page styles; update search input to use form element; enhance responsiveness in various components

--- a/src/components/NavItem/navItem.css
+++ b/src/components/NavItem/navItem.css
@@ -9,3 +9,9 @@
 .navigation-section__favorites:hover {
 	color: rgb(255, 230, 0);
 }
+
+@media screen and (max-width: 768px) {
+	.navigation-section__favorites {
+		font-size: 0.9rem;
+	}
+}
