--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,9 +5,21 @@
 	align-items: center;
 	padding: 2rem;
 	background-color: var(--dark-grey-bg);
+	width: 100%;
 }
 
 .header-section__logo {
 	background-color: var(--yellow-clr);
 	max-width: 12rem;
+	transition: all 0.2s ease-in-out;
+}
+
+@media screen and (max-width: 768px) {
+	.header-section {
+		gap: 1rem;
+		padding: 1rem;
+	}
+	.header-section__logo {
+		max-width: 5rem;
+	}
 }
