--- a/src/components/Carousel/carousel.css
+++ b/src/components/Carousel/carousel.css
@@ -7,6 +7,11 @@
 	top: 50%;
 	transform: translateY(-50%);
 	cursor: pointer;
+	background-color: #000;
+	padding: 0.4rem;
+	border-radius: 50%;
+	aspect-ratio: 1/1;
+	transition: all 0.2s ease-in-out;
 }
 
 .trailers-container__img:hover,
@@ -14,7 +19,8 @@
 	filter: invert(25%);
 	width: 2.5rem;
 	height: auto;
-	transition: width 0.4s ease-in-out, height 0.3s ease-in-out;
+	transition: all 0.3 ease-in-out;
+	scale: 1.5;
 }
 
 .trailers-container__img-right {
@@ -36,7 +42,7 @@
 }
 
 .trailers__video {
-	height: 250px;
+	height: 240px;
 	aspect-ratio: 16/9;
 	pointer-events: none;
 	position: absolute;
@@ -55,7 +61,7 @@
 
 .trailers__video-2,
 .trailers__video-4 {
-	height: 300px;
+	height: 290px;
 	left: 15%;
 	opacity: 1;
 	z-index: 1;
@@ -80,4 +86,25 @@
 .trailers__video-5 {
 	left: 85%;
 	opacity: 0.4;
+}
+
+@media screen and (max-width: 968px) {
+	.trailers__video {
+		height: 35vh;
+	}
+	.trailers__video-1,
+	.trailers__video-5 {
+		height: 20vh;
+	}
+
+	.trailers__video-2,
+	.trailers__video-4 {
+		height: 30vh;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.trailers__video {
+		aspect-ratio: 12/10;
+	}
 }
