--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body {
 .page {
 	min-height: 100vh;
 	background-color: var(--black-bg);
+	box-shadow: 1px 0px 13px 5px rgb(126, 126, 126);
 }
 .d-none {
 	display: none;
