--- a/src/pages/FavoritePage/favoritePage.css
+++ b/src/pages/FavoritePage/favoritePage.css
@@ -2,7 +2,7 @@
 	background-color: black;
 	color: white;
 	min-height: 100vh;
-
+	width: 100%;
 	font-family: 'Montserrat', sans-serif;
 }
 
@@ -22,9 +22,9 @@
 }
 
 .favorites-content-box {
-	background-color: #1a1a1a;
-	padding: 20px;
+	background-color: var(--dark-grey-bg);
+	padding: 1rem;
 	border-radius: 10px;
 	margin: 0 auto;
-	max-width: 1200px;
+	width: 100%;
 }
