--- a/src/pages/ErrorPage/errorPage.css
+++ b/src/pages/ErrorPage/errorPage.css
@@ -7,6 +7,8 @@
 	justify-content: center;
 	gap: 2rem;
 	text-align: center;
+	border-radius: 6px;
+	padding: 1rem;
 }
 
 .page-error__image-container {
@@ -17,8 +19,7 @@
 .page-error__image-container img {
 	max-width: 100%;
 	height: 100%;
-	margin-left: 0.7rem;
-	margin-top: 2rem;
+	margin-left: 0.3rem;
 }
 
 .page-error__button {
